--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
 		"prettier": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
 	},
 	"dependencies": {
-		"@radix-ui/react-slot": "^1.0.2",		
-		"@types/nprogress": "^0.2.1",
-		"@radix-ui/react-label": "^2.0.2",
+		"@hookform/resolvers": "^3.3.2",
+		"@radix-ui/react-checkbox": "^1.1.1",
 		"@radix-ui/react-dialog": "^1.0.5",
-		"class-variance-authority": "^0.7.0",
-		"@radix-ui/react-toast": "^1.1.5",
+		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-popover": "^1.0.7",
-		"react-day-picker": "^8.9.1",
 		"@radix-ui/react-scroll-area": "^1.0.5",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-switch": "^1.0.3",
+		"@radix-ui/react-toast": "^1.1.5",
+		"@types/nprogress": "^0.2.1",
+		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
 		"cmdk": "^0.2.0",
 		"date-fns": "^2.30.0",
@@ -28,13 +30,13 @@
 		"next": "^14.2.0",
 		"next-themes": "^0.2.1",
 		"react": "18.2.0",
+		"react-day-picker": "^8.9.1",
 		"react-dom": "18.2.0",
 		"react-hook-form": "^7.47.0",
 		"sonner": "^1.4.41",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss-animate": "^1.0.7",
-		"zod": "^3.22.4",
-		"@hookform/resolvers": "^3.3.2"
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "^6.4.5",
